tests/errors/wrong_argument_count.vhpt
--TEST--
Wrong argument count error
--FILE--
<?php
function greet($name) {
    return "Hello, " . $name;
}
greet();
--EXPECT_ERROR--
argument
